--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 body {
     margin : 0px;
+    width : 100%;
+    height : 100%;
 }
 #header {
+    width : 100%;
     position: relative; /* #header에 투명도를 주면 컨텐츠도 같이 투명해지기 때문에.. */
     height : 430px;
  }
@@ -44,6 +47,7 @@ form {
     color : white;
 }
 .title {
+    width : 100%;
     margin-top : 20px;
     margin-bottom : 0px;
     font-family : Anton;
@@ -57,6 +61,7 @@ form {
     color : inherit;
 }
 .sub_title {
+    width : 100%;
     margin : 0px;
     font-family : Noto Sans KR;
     font-size : 5vmin;
@@ -65,6 +70,7 @@ form {
     text-shadow : -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 #menu {
+    width : 100%;
     margin : 3vmin;
     text-align : center;
 }
@@ -83,11 +89,14 @@ form {
     color : inherit;
 }
 #Best_Diarier {
+    width : 100%;
     background-color: #F4F4F4;
     position : relative;
     height : 650px;
+    width : 100%;
 }
 .page_title {
+    width : 100%;
     padding-top : 50px;
     font-family : Titillium Web;
     font-size : 50px;
@@ -95,6 +104,7 @@ form {
     text-align : center;
 }
 .page_sub {
+    width : 100%;
     padding : 5px;
     font-family : Noto Sans KR;
     font-size : 20px;
@@ -112,6 +122,7 @@ form {
     color : #727272;
 }
 .diary_group {
+    width : 100%;
     margin : 30px 70px 40px 70px;
     display : grid;
     grid-template-columns:1fr 1fr 1fr 1fr;
@@ -130,10 +141,12 @@ form {
     font-weight : bold;
 }
 #Best_place {
+    width : 100%;
     position : relative;
     height : 650px;
 }
 .place_group {
+    width : 100%;
     margin : 30px 70px 40px 70px;
     display : grid;
     grid-template-columns:1fr 1fr 1fr 1fr;
@@ -156,6 +169,7 @@ form {
     transform: translate(-50%, -50%);
 }
 #footer {
+    width : 100%;
     background-color: #303030;
     padding : 80px 40px 15px 70px;
     height : 80px;
